feature:[Button Component] - Created tests for button componente

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  width: 100%;
+}
+
+.middle {
+  display: flex;
+  position: relative;
+  
 }
 
 .App-logo {
